<resources>
    <string name="app_name">Childrens Learning App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="colors">Colors</string>
    <string name="counting">Counting</string>
    <string name="check_progress">Check Progress</string>
    <string name="start_">Start</string>
    <string name="start__">Start</string>
    <string name="welcome_what_would_you_like_to_practice_today">Welcome! What would you like to practice today?</string>
</resources>